--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -30,7 +30,7 @@
         </div> -->
       </div>
       <div class="hero-image">
-        <img src="images/hero-illustration.svg" alt="Earn with CashPop">
+        <img src="https://img.freepik.com/free-vector/salary-payment-concept_52683-68859.jpg?t=st=1746471566~exp=1746475166~hmac=1325214f7f5a606c6ed7543361a5727a09f1acb30b9ff123ede1868e50202a33&w=740" alt="Earn with CashPop">
       </div>
     </div>
   </section>
