final and hosting

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -7,6 +7,7 @@
     <title>{% block title %}CashPop - Earn Money with Simple Tasks{% endblock title %}</title>
     <link rel="stylesheet" href="{% static "style.css" %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static "images/cashpop-logo.png" %}" type="image/x-icon">
   </head>
 
   <body>
