--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -9,8 +9,8 @@
   <section class="hero">
     <div class="container">
       <div class="hero-content">
-        <h1>Turn Your Spare Time into Real Money</h1>
-        <p>Complete simple tasks like following social accounts, watching videos, and more to earn cash rewards instantly!</p>
+        <h1>Your Next Data and Airtime top-up is on us, not from your pocket!</h1>
+        <p>Tired of worrying about data or airtime? CashPop empowers you to earn what you need, effortlessly. Turn those idle minutes into mobile data or airtime by completing quick tasks. Join the smart way to stay connected – for FREE!</p>
         <div class="hero-buttons">
           <a href="{% url "base:register" %}" class="btn btn-primary">Get Started</a>
         </div>
@@ -57,8 +57,8 @@
         </div>
         <div class="step">
           <div class="step-icon">4</div>
-          <h3>Cash Out</h3>
-          <p>Transfer earnings to your bank or PayPal</p>
+          <h3>Cash Out or Top-Up Airtime or Data</h3>
+          <p>Transfer earnings to your bank or or Convert to Airtime or Data</p>
         </div>
       </div>
     </div>
@@ -90,6 +90,36 @@
       </div>
     </div>
   </section>
+
+  <section class="task-creators">
+    <div>
+      <h2>Get Real Engagement for Your Brand or Business!</h2>
+    </div>
+    <div>
+      <p>Want people to follow your page, watch your videos, visit your website, or test your app?
+            <br>Create tasks on our platform and watch real users take real action — fast!
+      </p>
+    </div>
+    <div>
+      <h3 class="choose-us">Why Choose Us?</h3>
+      <div>
+        <ul>
+        <li>Pay-Per-Task Model – only pay for completed actions</li>
+        <li>High Engagement – get social proof, traffic, and conversions</li>
+        <li>Custom Tasks – set your budget and goals</li>
+        <li>Track Results in Real Time</li>
+      </ul>
+      <p  class="perfect"><strong>Perfect for marketers, creators, businesses, and startups.</strong></p>
+      </div>
+      <div class"perfect-container">
+        <h3 class="perfect"></h3>
+      </div>
+      <div>
+        <a class="task-creator-link" href="{% url "base:register" %}">Start Creating Task</a>
+      </div>
+  </section>
+
+  
 
   <!-- Testimonials -->
   <section class="testimonials">
