--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -41,18 +41,18 @@
         <div class="container">
           <div class="footer-content">
             <div class="footer-logo">
-              <span class="logo-icon">✨</span>
+              <img class="logo-icon" src=" {% static "images/cashpop-logo.png" %}" alt="">
               <span class="logo-text">CashPop</span>
             </div>
             <div class="footer-links">
               <div class="footer-links-column">
-                <h3>Company</h3>
+                <!-- <h3>Company</h3>
                 <ul>
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="#">Careers</a></li>
                   <li><a href="#">Press</a></li>
                   <li><a href="#">Blog</a></li>
-                </ul>
+                </ul> -->
               </div>
               <div class="footer-links-column">
                 <h3>Resources</h3>
@@ -60,24 +60,23 @@
                   <li><a href="faq.html">FAQ</a></li>
                   <li><a href="#">Support</a></li>
                   <li><a href="#">Task Guidelines</a></li>
-                  <li><a href="#">Community</a></li>
                 </ul>
               </div>
               <div class="footer-links-column">
-                <h3>Legal</h3>
+                <!-- <h3>Legal</h3> -->
                 <ul>
-                  <li><a href="#">Privacy Policy</a></li>
+                  <!-- <li><a href="#">Privacy Policy</a></li>
                   <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Cookie Policy</a></li>
+                  <li><a href="#">Cookie Policy</a></li> -->
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-bottom">
-            <p>&copy; 2023 CashPop. All rights reserved.</p>
+            <p>&copy; 2025 CashPop. All rights reserved.</p>
             <div class="social-links">
               <a href="#" class="social-link">Facebook</a>
-              <a href="#" class="social-link">Twitter</a>
+              <!-- <a href="#" class="social-link">Twitter</a> -->
               <a href="#" class="social-link">Instagram</a>
             </div>
           </div>
