--- a/base/static/style.css
+++ b/base/static/style.css
@@ -2179,3 +2179,34 @@ ul, ol {
   height: 100%; /* Fill the container height */
   overflow-y: auto; /* Scroll only vertically */
 }
+
+.task-creators {
+  background: #fff4eb;
+  color: black;
+  padding: var(--space-8);
+  text-align: center;
+}
+
+.task-creators h2 {
+  color: red;
+}
+
+.task-creators h3 {
+  color: var(--primary-dark);
+  margin: 0;
+}
+
+.task-creator-link {
+  border: #e23b71;
+  background: linear-gradient(135deg, var(--primary), var(--secondary));;
+  text-align: center;
+  padding: 15px;
+  border-radius: 10px;
+  color: white; 
+  cursor: pointer;
+}
+
+.perfect {
+  color: var(--primary-dark);
+  font-size : 64;
+}
