--- a/static/style.css
+++ b/static/style.css
@@ -182,7 +182,9 @@ ul, ol {
 }
 
 .logo-icon {
-  font-size: 1.5em;
+  width: 80px;
+  padding: 10px;
+  border-radius: 50px;
 }
 
 .logo-text {
@@ -638,13 +640,9 @@ ul, ol {
   margin-top: var(--space-10);
 }
 
-@media screen and (max-width: 480px) {
-  .dashboard-link-container {
-    display: none;
-    justify-content: space-between;
-    align-items: center;
-    
-  }
+
+.dashboard-link-container {
+  display: flex;
 }
 
 .dashboard-link-container a {
@@ -658,6 +656,13 @@ ul, ol {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 480px) {
+  .dashboard-link-container {
+    display: none;
+    
+    
+  }
+}
 /* Testimonials */
 .testimonials {
   background-color: var(--muted-light);
@@ -839,11 +844,25 @@ ul, ol {
   padding: var(--space-8) 0;
 }
 
+
+.dashboard-text-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-bottom: 20px;
+  max-width: 100%;
+}
+
+.dashboard-text-container h3 {
+  margin: 0;
+}
+
 @media screen and (max-width: 480px) {
   .dashboard-text-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-direction: column;
+    margin-bottom: 20px;
   }
 }
 
@@ -1088,6 +1107,10 @@ ul, ol {
   .profile-tab a {
     font-size: smaller;
   }
+
+  .profile {
+    max-width: 100%;
+  }
 }
 
 .profile-tab {
@@ -1118,6 +1141,7 @@ ul, ol {
 
 .profile-tab-content {
   display: block;
+  max-width: 100%;
 }
 
 .profile-tab-content.active {
@@ -1140,6 +1164,7 @@ ul, ol {
   display: flex;
   flex-direction: column;
   gap: var(--space-3);
+  max-width: 100%;
 }
 
 .task-history-item,
@@ -1150,6 +1175,7 @@ ul, ol {
   padding: var(--space-4);
   background: var(--muted-light);
   border-radius: var(--radius-md);
+  max-width: 100%;
 }
 
 .task-history-details h3,
@@ -1230,6 +1256,7 @@ ul, ol {
 .choices {
   padding: 10px;
   background-color: rgb(231, 231, 231);
+  max-width: 50%;
 }
 
 .text {
@@ -1578,6 +1605,15 @@ ul, ol {
   
   .profile-container {
     grid-template-columns: 1fr;
+    margin: 0 20px;
+  }
+
+  /* .profile-main {
+    margin: 10px 20px;
+  } */
+
+  .container {
+    width: 100%;
   }
 }
 
@@ -1690,12 +1726,21 @@ ul, ol {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  max-width: 100%;
+}
+
+.amount-container {
+  max-width: 100%;
 }
 
 .amount-container h4 {
-  font-size: large;
   margin: 0;
   color: rgb(4, 1, 180);
+}
+
+.amount-container span {
+  font-size: smaller;
+  margin: 0;
 }
 
 .status-pending{
@@ -1703,28 +1748,37 @@ ul, ol {
 }
 
 .status-completed{
-  color: orange;
+  color: green;
 }
 
 .proof-container {
   display: flex;
   justify-content: space-between;
-  background-color: #f1f1f1;
-  padding: 15px;
+  background-color: #fafafa;
+  padding: 8px;
   align-items: center;
   margin-bottom: 10px;
   max-width: 100%;
 }
 
 
-.proof-container h3 {
+.proof-container h4 {
   margin: 0;
-  margin: 15px 0;
+  /* margin: 15px 0; */
 }
 
 .username {
   margin: 0;
-  margin-top: 13px;
+  /* margin-top: 13px; */
+  font-size: small;
+}
+
+.user-name {
+  font-size: small;
+}
+
+.task-time {
+  font-size: small;
 }
 
 .approve {
@@ -1752,6 +1806,7 @@ ul, ol {
 
 .earning-transfer {
   padding: 10px;
+  max-width: 100%;
 }
 
 .earning-transfer input {
@@ -1942,6 +1997,7 @@ ul, ol {
   color: #333;
   line-height: 1.6;
 }
+
 .button {
   display: inline-block;
   padding: 12px 20px;
@@ -1950,4 +2006,206 @@ ul, ol {
   text-decoration: none;
   border-radius: 5px;
   margin-top: 20px;
+}
+
+.data-option option {
+  padding: 5px;
+}
+
+.recharge-history-container {
+  max-width: 100%;
+}
+
+@media screen and (max-width: 480px)  {
+  .side_bar_container {
+    padding: 10px;
+  }
+
+  .profile_link_container {
+    margin: 0 10px;
+  }
+
+  .heading_container {
+    padding: 20px;
+  }
+
+  .heading_container h4 {
+    color: rgb(68, 0, 255);
+  }
+
+  .heading_container input {
+    padding: 10px;
+    margin: 10px 0;
+  }
+
+  .top_up_history_container {
+    background-color: #e2ffde;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 0;
+    padding: 15px;
+    overflow-y: auto; /* Scroll only vertically */
+  }
+
+  .top_up_main_container {
+    padding: 10px;
+    height: 300px;
+    overflow: hidden;
+  }
+}
+
+.top_up_scroll {
+  height: 100%; /* Fill the container height */
+  overflow-y: auto; /* Scroll only vertically */
+
+}
+
+.top_up_time {
+  color: red;
+  font-size: xx-small;
+}
+
+.top_up_amount {
+  color: #17c964;
+  font-size: smaller;
+  font-weight: bold;
+}
+
+.top_up_type {
+  color: #7e69ab;
+}
+
+.success {
+  color: green;
+  background-color: #e6ffe6;
+  border: 1px solid green;
+  padding: 10px;
+  border-radius: 5px;
+  list-style-type: none;
+  text-align: center;
+  margin: 0 10px;
+}
+
+.error {
+  color: red;
+  background-color: #ffe6e6;
+  border: 1px solid red;
+  padding: 10px;
+  list-style-type: none;
+  text-align: center;
+  border-radius: 5px;
+  margin: 0 10px;
+}
+
+.referal-code {
+  font-size: small;
+  margin-bottom: 10px;
+  background-color: #c9c4dd;
+  padding: 10px;
+}
+
+.data-choices {
+  max-width: 250px;
+  padding: 10px;
+  background-color: rgb(231, 231, 231);
+}
+
+.task-container {
+  max-width: 600px;
+  background-color: #ffffff;
+  margin: 30px auto;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+.task-header {
+  text-align: center;
+  padding-bottom: 20px;
+}
+.task-header h2 {
+  color: #333;
+}
+.task-content {
+  font-size: 16px;
+  color: #555;
+  line-height: 1.6;
+}
+.task-button {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 12px 24px;
+  background-color: #007BFF;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+.task-footer {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 12px;
+  color: #aaa;
+}
+
+.task-approved-container { 
+  padding: 20px; 
+  background-color: #f9f9f9; 
+  border-radius: 8px; 
+}
+
+.task-approved-container h2 { 
+  color: #4CAF50; 
+}
+
+
+.task-rejected-container { 
+  padding: 20px; 
+  background-color: #fff3f3; 
+  border-radius: 8px; 
+}
+
+.task-rejected-container h2 { 
+  color: #e53935; 
+}
+
+.scroll-container {
+  height: 300px; /* Fixed height */
+  overflow: hidden;
+}
+
+.scrollable-content {
+  height: 100%; /* Fill the container height */
+  overflow-y: auto; /* Scroll only vertically */
+}
+
+.task-creators {
+  background: #fff4eb;
+  color: black;
+  padding: var(--space-8);
+  text-align: center;
+}
+
+.task-creators h2 {
+  color: red;
+}
+
+.task-creators h3 {
+  color: var(--primary-dark);
+  margin: 0;
+}
+
+.task-creator-link {
+  border: #e23b71;
+  background: linear-gradient(135deg, var(--primary), var(--secondary));;
+  text-align: center;
+  padding: 15px;
+  border-radius: 10px;
+  color: white; 
+  cursor: pointer;
+}
+
+.perfect {
+  color: var(--primary-dark);
+  font-size : 64;
 }
